//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  discord_id String [unique, not null]
  username String [not null]
  global_name String
  joined_at Int
  created_at Int
  update_at Int
  last_active Int
  bot Boolean [not null]
  email String
  user_role user_role [not null]
  user_event user_event [not null]
  message message [not null]
  message_reaction message_reaction [not null]
  audio_event audio_event [not null]
}

Table role {
  id Int [pk, increment]
  discord_id String [not null]
  name String [not null]
  created_timestamp Int [not null]
  user_role user_role [not null]
}

Table user_role {
  user user [not null]
  user_id Int [not null]
  role role [not null]
  roleId Int [not null]

  indexes {
    (user_id, roleId) [pk]
  }
}

Table audio_event {
  id Int [pk, increment]
  channel_id Int [not null]
  channel channel [not null]
  creator_id Int [not null]
  creator user [not null]
  name String [not null]
  description String
  status event_status [not null]
  status_id Int [not null]
  start_timestamp Int [not null]
  end_timestamp Int [not null]
  user_count Int [not null]
  user_event user_event [not null]
  image String
}

Table event_status {
  id Int [pk, increment]
  name String [not null]
  event audio_event [not null]
}

Table user_event {
  event audio_event [not null]
  event_id Int [not null]
  user user [not null]
  user_id Int [not null]

  indexes {
    (user_id, event_id) [pk]
  }
}

Table message {
  id Int [pk, increment]
  discord_id String [not null]
  channel channel [not null]
  channel_id Int [not null]
  user_id Int [not null]
  user user [not null]
  created_timestamp Int [not null]
  message_reaction message_reaction [not null]
}

Table channel {
  id Int [pk, increment]
  discord_id String [not null]
  name String [not null]
  url String [not null]
  message message [not null]
  audio_event audio_event [not null]
  message_reaction message_reaction [not null]
}

Table message_reaction {
  user user [not null]
  user_id Int [not null]
  message message [not null]
  message_id Int [not null]
  channel channel [not null]
  channel_id Int [not null]

  indexes {
    (user_id, message_id) [pk]
  }
}

Ref: user_role.user_id > user.id

Ref: user_role.roleId > role.id

Ref: audio_event.channel_id > channel.id

Ref: audio_event.creator_id > user.id

Ref: audio_event.status_id > event_status.id

Ref: user_event.event_id > audio_event.id

Ref: user_event.user_id > user.id

Ref: message.channel_id > channel.id

Ref: message.user_id > user.id

Ref: message_reaction.user_id > user.id

Ref: message_reaction.message_id > message.id

Ref: message_reaction.channel_id > channel.id